--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -9,11 +9,15 @@
 
 <body>
    <h1>TEST ONE TWO/h1>
+
+    
    
    <p>
-       Jean Didier Ernest
-       Jaylin Young
-       Jian Soriano
+       Jean Didier Ernest <br>
+       Jaylin Young <br>
+       Jian Soriano <br>
+
+       We will ace this assignment <br>
    </p>
   
 </body> <!--end body-->
