--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -8,16 +8,16 @@
 </head><!--end head-->
 
 <body>
-   <h1>TEST ONE TWO/h1>
+   <h1> TEST ONE TWO </h1>
 
     
    
    <p>
-       Jean Didier Ernest <br>
+       Jean Didier Ernest<br>
        Jaylin Young <br>
-       Jian Soriano <br>
+       Jian Soriano <br> <br>
 
-       We will ace this assignment <br>
+       Together, we will ace this assignment <br>
    </p>
   
 </body> <!--end body-->
