--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -13,7 +13,7 @@
 
     <div class="header">
         <h1>
-            Title of the page (DRAFT)
+            Horizon Skyline Perseption
             <img src="logo.png" alt="UMD logo">
         </h1>
     </div> <!--end <div class="header">-->
