--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -42,7 +42,9 @@
                     <p>
                         This page is about telling people that 
                         there is always hope. There is always something
-                        behind the perceived end line.
+                        behind the perceived end line. Be motivated on 
+                        breaking obstacles. Difficult times sre like storms
+                        . They never last.
                         <br><br>
                         WE MUST DO THIS TOGETHER TEAM<br>
                         IT CANNOT BE PNE PERSON IDEA
