--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -49,9 +49,9 @@
                         WE MUST DO THIS TOGETHER TEAM<br>
                         IT CANNOT BE PNE PERSON IDEA
                         <ol>
-                            <li>first thing</li>
-                            <li>second thing</li>
-                            <li>third thing</li>
+                            <li>Our imagination has no limit.</li>
+                            <li>There will always be a horizon</li>
+                            <li>Dream big and work hard</li>
                         </ol>
 
                         <ul>
