--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -46,12 +46,11 @@
                         breaking obstacles. Difficult times sre like storms
                         . They never last.
                         <br><br>
-                        WE MUST DO THIS TOGETHER TEAM<br>
-                        IT CANNOT BE PNE PERSON IDEA
+                        
                         <ol>
                             <li>Our imagination has no limit.</li>
-                            <li>There will always be a horizon</li>
-                            <li>Dream big and work hard</li>
+                            <li>There will always be a horizon.</li>
+                            <li>Dream big and work hard.</li>
                         </ol>
 
                         <ul>
