--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -7,6 +7,7 @@
   <meta charset="utf-8">
   <title>Assignment 1</title>
   <link rel="stylesheet" href="style.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
 </head><!--end head-->
 
 <body>
