fonts, body-image tag, and other stuff

--- a/public/asst-1/index-jian.html
+++ b/public/asst-1/index-jian.html
@@ -7,9 +7,10 @@
   <meta charset="utf-8">
   <title>Assignment 1</title>
   <link rel="stylesheet" href="style-jian.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
 </head><!--end head-->
 
-<body>
+<body class="body">
 
     <div class="header">
         <h1>
@@ -23,7 +24,7 @@
 
         <!--1st nested div nested1-->
         <div class="nested1">
-            <img src="horizon.jpg" alt="horizon view">
+            <img class="body-image" src="horizon.jpg" alt="horizon view">
             <p>
                 The earth's crust has not yet stopped 
                 heaving and plunging under our feet. 
