--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -49,34 +49,37 @@
                         
                         <div class="list">
                         <ol>
-                            <li><h2>Our imagination has no limit.</h2>
-                            <p>A single descriptive paragraph explaining a 
-                                bit about your page</p>
-                            <ul>
-                                <li>first point related to the header</li>
-                                <li>second point related to the header</li>
-                                <li>third point related to the header</li>
-                            </ul>
+                            <li>
+                                <h2>Our imagination has no limit.</h2>
+                                    <p>A single descriptive paragraph explaining a 
+                                    bit about your page</p>
+                                <ul>
+                                    <li>first point related to the header</li>
+                                    <li>second point related to the header</li>
+                                    <li>third point related to the header</li>
+                                </ul>
                             </li>
 
-                            <li><h2>There will always be a horizon.</h2>
-                                <p>A single descriptive paragraph explaining a 
-                                    bit about your page</p>
-                            <ul>
-                                <li>first point related to the header</li>
-                                <li>second point related to the header</li>
-                                <li>third point related to the header</li>
-                            </ul>
+                            <li>
+                                <h2>There will always be a horizon.</h2>
+                                    <p>A single descriptive paragraph explaining a 
+                                        bit about your page</p>
+                                <ul>
+                                    <li>first point related to the header</li>
+                                    <li>second point related to the header</li>
+                                    <li>third point related to the header</li>
+                                </ul>
                             </li>
 
-                            <li><h2>Dream big and work hard.</h2>
-                                <p>A single descriptive paragraph explaining a 
+                            <li>
+                                <h2>Dream big and work hard.</h2>
+                                    <p>A single descriptive paragraph explaining a 
                                     bit about your page</p>
-                            <ul>
-                                <li>first point related to the header</li>
-                                <li>second point related to the header</li>
-                                <li>third point related to the header</li>
-                            </ul>
+                                <ul>
+                                    <li>first point related to the header</li>
+                                    <li>second point related to the header</li>
+                                    <li>third point related to the header</li>
+                                </ul>
                             </li>
                         </ol>
                         </div> <!--end <div class="list">-->
