updated index.html and styles.css for cypress testing

--- a/public/asst-1/index-jian.html
+++ b/public/asst-1/index-jian.html
@@ -20,7 +20,7 @@
     </div> <!--end <div class="header">-->
 
     <div class="wrapper">
-        <div class="content">
+        <div class="container">
 
         <!--1st nested div nested1-->
         <div class="nested1">
