--- a/public/asst-1/index.html
+++ b/public/asst-1/index.html
@@ -51,36 +51,37 @@
                         <ol>
                             <li>
                                 <h2>Our imagination has no limit.</h2>
-                                <p>A single descriptive paragraph explaining a bit about your page</p>
+                                <p>Our imagination has no limit</p>
                                 <div class="list">
                                     <ul class="sublist">
-                                        <li>first point related to the header</li>
-                                        <li>second point related to the header</li>
-                                        <li>third point related to the header</li>
+                                        <li>We can break all obstacles</li>
+                                        <li>Small minded people don't usually succeed</li>
+                                        <li>Push yourself to the horizon, and keep on doing it.</li>
+                                    </ul>
+                                </div>
+                            </li>
+
+                           
+                            <li>
+                                <h2>Never-ending opportunities</h2>
+                                <p>There will always be a horizon.</p>
+                                <div class="list">
+                                    <ul class="sublist">
+                                        <li>You are the leader of your life</li>
+                                        <li>Leaders always go toward the horizon</li>
+                                        <li>Keep going forward</li>
                                     </ul>
                                 </div>
                             </li>
 
                             <li>
-                                <h2>There will always be a horizon.</h2>
-                                <p>A single descriptive paragraph explaining a bit about your page</p>
+                                <h2>Be motivated</h2>
+                                <p>Dream big and work hard!</p>                      
                                 <div class="list">
                                     <ul class="sublist">
-                                        <li>first point related to the header</li>
-                                        <li>second point related to the header</li>
-                                        <li>third point related to the header</li>
-                                    </ul>
-                                </div>
-                            </li>
-
-                            <li>
-                                <h2>Dream big and work hard.</h2>
-                                <p>A single descriptive paragraph explaining a bit about your page</p>                      
-                                <div class="list">
-                                    <ul class="sublist">
-                                        <li>first point related to the header</li>
-                                        <li>second point related to the header</li>
-                                        <li>third point related to the header</li>
+                                        <li>People who tries to touch the horizon usually succeed</li>
+                                        <li>It takes hard work to succeed</li>
+                                        <li>It takes motivation as well</li>
                                     </ul>
                                 </div>
                             </li>
